# Athena

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  ADMIN_GUIDE.md  AGENTS.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ARCHITECTURE_REVIEW.md  ATHENA_VN_EDITION.md  ATHENA_WEBAPP_V1.md  ATHENA_v1.0_RELEASE.md  BENCHMARK_REPORT.md  CALIBRATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_REPORT.md  DATA_CARD.md  DATA_PROVIDER_TEST_REPORT.md  DATA_QUALITY_REPORT.md  DECISION_VALIDATION_REPORT.md  DECISION_VALIDATION_V2.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_REPORT.md  DNSE_PROVIDER.md  DRIFT_REPORT.md  Dockerfile  Dockerfile.production  EXPERIMENT_REGISTRY.md  FAILURE_INJECTION_REPORT.md  FEATURE_IMPORTANCE_REPORT.md  FINAL_TECHNICAL_REVIEW.md  FRONTEND_STATUS.md  GAP_ANALYSIS.md  GO_LIVE_CHECKLIST.md  HUMAN_REVIEW_REPORT.md  HUONG_DAN_TRIEN_KHAI.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_PLAN.md  (+42 more)
adr/: 0000-template.md  0001-modular-monolith.md  0002-technology-stack.md  0003-llm-boundary.md  0004-canonical-bounded-contexts.md  0005-decision-lifecycle-and-risk-portfolio-contract.md  0006-evidence-model.md  0007-knowledge-graph-storage.md  0009-authentication-strategy.md  0010-in-process-event-bus.md  0011-ruff-format-as-black-gate.md  0013-decision-kernel-design.md  0014-behavior-detector-heuristics.md  0015-backtest-simulation-conventions.md  0016-scenario-simulator-parameters.md  0017-provider-sync-conventions.md  0018-observability-stack.md  0019-security-hardening.md  0020-production-data-provider.md  README.md
docs/: BENCHMARKS.md  DEPLOYMENT.md  DR_CHECKLIST.md  DR_PLAN.md  PRODUCTION_CHECKLIST.md  RUNBOOK.md  SECURITY_REVIEW.md
research/: aggregate.py  human_review.py  portfolio_extra.py  replay_decisions.py  study.py  vn_market.py
rfc/: 0000-template.md  0017-decision-dsl.md  0018-probability-engine.md  0019-knowledge-graph.md  0020-decision-compiler.md  0023-feature-store.md  0024-data-pipeline.md  0025-market-regime-classification.md  0026-probability-engine-parameters.md  0027-risk-engine-parameters.md
scripts/: __init__.py  athena  backup.sh  benchmark.py  daily_report.py  restore.sh  seed.py  start.sh  sync_entrypoint.sh
spec/: 00-engineering-constitution.md  01-product.md  01-system-overview.md  02-architecture.md  03-decision-pipeline.md  03-domain-model.md  04-data.md  (+12 more)
(+428 files in other folders)
