[project]
name = "athena"
version = "0.1.0"
description = "ATHENA — Financial Decision Intelligence Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "duckdb>=1.0",
    "polars>=1.0",
    "pyarrow>=17.0",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"backend/infrastructure/alembic/versions/*" = ["E501"]
# B008: FastAPI's Depends()/Query() in parameter defaults is the framework idiom.
"backend/api/**" = ["B008"]
# research/: Phase 4 experiment harnesses (not production code). sys.path
# bootstrap forces post-path imports (E402); dense table-printing lines (E501).
"research/**" = ["E402", "E501", "E702", "E731"]

[tool.mypy]
strict = true
mypy_path = "backend"
files = ["backend", "tests"]
explicit_package_bases = true
namespace_packages = true
